FRONTEND: Fixed the alignment of icons and text in create community page

--- a/backend/api/core/static/style.css
+++ b/backend/api/core/static/style.css
@@ -1286,7 +1286,6 @@ img {
   border: none;
   padding: 0;
   background: none;
-  float: right; 
   margin-left: 10px; 
 }
 
